docs: Add Auth and some Person API endpoints
